// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Header on Caught page 1`] = `
<header
  className="page__header header"
>
  <nav
    className="header__nav-wrap"
  >
    <div
      className="logo"
    >
      <a
        className="logo__link"
        href="/"
        onClick={[Function]}
      >
        POKEDEX
      </a>
    </div>
    <ul
      className="header__menu menu"
    >
      <li
        className="menu__item"
      >
        <a
          aria-current={null}
          className="menu__link"
          href="/"
          onClick={[Function]}
        >
          ALL
        </a>
      </li>
      <li
        className="menu__item"
      >
        <a
          aria-current="page"
          className="menu__link  menu__link--selected"
          href="/caught"
          onClick={[Function]}
          style={Object {}}
        >
          CAUGHT
        </a>
      </li>
    </ul>
  </nav>
</header>
`;

exports[`Render Header on Detail page 1`] = `
<header
  className="page__header header"
>
  <nav
    className="header__nav-wrap"
  >
    <div
      className="logo"
    >
      <a
        className="logo__link"
        href="/"
        onClick={[Function]}
      >
        POKEDEX
      </a>
    </div>
    <ul
      className="header__menu menu"
    >
      <li
        className="menu__item"
      >
        <a
          aria-current={null}
          className="menu__link"
          href="/"
          onClick={[Function]}
        >
          ALL
        </a>
      </li>
      <li
        className="menu__item"
      >
        <a
          aria-current={null}
          className="menu__link"
          href="/caught"
          onClick={[Function]}
        >
          CAUGHT
        </a>
      </li>
    </ul>
  </nav>
</header>
`;

exports[`Render Header on Main page 1`] = `
<header
  className="page__header header"
>
  <nav
    className="header__nav-wrap"
  >
    <div
      className="logo"
    >
      <a
        className="logo__link"
        href="/"
        onClick={[Function]}
      >
        POKEDEX
      </a>
    </div>
    <ul
      className="header__menu menu"
    >
      <li
        className="menu__item"
      >
        <a
          aria-current="page"
          className="menu__link menu__link--selected"
          href="/"
          onClick={[Function]}
          style={Object {}}
        >
          ALL
        </a>
      </li>
      <li
        className="menu__item"
      >
        <a
          aria-current={null}
          className="menu__link"
          href="/caught"
          onClick={[Function]}
        >
          CAUGHT
        </a>
      </li>
    </ul>
  </nav>
</header>
`;
